clang-analyzer cleanup

--- a/src/resource/strings.rc
+++ b/src/resource/strings.rc
@@ -2,10 +2,14 @@
 
 STRINGTABLE {
 
-    IDS_OK,     "OK"
-    IDS_YES,    "Yes"
-    IDS_NO,     "No"
-    IDS_CANCEL, "Cancel"
-    IDS_ABORT,  "Abort"
+    IDS_OK       "OK"
+    IDS_YES      "Yes"
+    IDS_NO       "No"
+    IDS_CANCEL   "Cancel"
+    IDS_ABORT    "Abort"
+    IDS_RETRY    "Retry"
+    IDS_TRYAGAIN "Try Again"
+    IDS_CONTINUE "Continue"
+    IDS_IGNORE   "Ignore"
 
 }
